--- a/Blog+django/pages/templates/pages/page.html
+++ b/Blog+django/pages/templates/pages/page.html
@@ -8,7 +8,7 @@
      <div class="bw-release-body ">
       <div class="bw-release-story" itemprop="articleBody">
     
-    <h1> {{page.title}} </h1>
+    <h1 class="epi-pageTitle"> {{page.title}} </h1>
 
     <div class="bw-release-timestamp">
         {{page.created_at}}       
