--- a/Blog+django/mainapp/templates/layouts/layout_model_1.html
+++ b/Blog+django/mainapp/templates/layouts/layout_model_1.html
@@ -19,7 +19,7 @@
   {% comment %} <link rel="stylesheet" href="{% static 'css/main.css' %}"> {% endcomment %}
   
   <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style-del-curso.css' %}">
+  {% comment %} <link rel="stylesheet" href="{% static 'css/style-del-curso.css' %}"> {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
