--- a/Blog+django/pages/templates/pages/page.html
+++ b/Blog+django/pages/templates/pages/page.html
@@ -1,4 +1,8 @@
-{% extends 'layouts/layout.html' %}
+{% extends 'layouts/layout_model_2.html' %}
+
+{% comment %} {% extends 'layouts/layout.html' %} {% endcomment %}
+
+
 
 {% block title %} {{page.title}} {% endblock %}
 
