--- a/Blog+django/mainapp/templates/mainapp/about.html
+++ b/Blog+django/mainapp/templates/mainapp/about.html
@@ -1,4 +1,7 @@
-{% extends 'layouts/layout.html' %}
+{% extends 'layouts/layout_model_2.html %}
+{% comment %} {% extends 'layouts/layout.html' %} {% endcomment %}
+
+
 
 {% block title %} {{title}} {% endblock %}
 
