--- a/Blog+django/mainapp/templates/layouts/layout_model_1.html
+++ b/Blog+django/mainapp/templates/layouts/layout_model_1.html
@@ -88,7 +88,24 @@
                   </li>
                   -->
 
-                  <!-- News -->
+                   <!-- CATEGORIES -->
+                  <li class="bw-has-submenu bw-current">
+                    <a href="{% url 'articles-list' %}"><span>Categorías</span></a>
+                    <ul>
+                      <li>
+                        <a href="#">Categoria 1</a>
+                      </li>
+                      <li>
+                        <a href="#">Categoria 2</a>
+                      </li>
+                      <li>
+                        <a href="#">Categoria 3</a>
+                      </li>
+                    </ul>
+				          </li>
+
+
+                  <!-- News 
                   <li class="bw-has-submenu bw-current">
                     <a href="https://www.businesswire.com/portal/site/home/news/"><span>News</span></a>
                     <ul>
@@ -112,7 +129,9 @@
                       </li>
                     </ul>
 				          </li>
-                  <!-- education -->
+                   END NEWS -->
+
+                  <!-- education
                   <li class="bw-has-submenu ">
                     <a href="https://services.businesswire.com/resources-education"><span>Education</span></a>
                     <ul>
@@ -139,7 +158,9 @@
                       </li>
                     </ul>
                   </li>
-                  <!-- about us -->
+                  END EDUCATION  -->
+
+                  <!-- about us 
                   <li class="bw-has-submenu ">
                     <a href="{% url 'index' %}"><span>About Us</span></a>
                     <ul>
@@ -163,12 +184,14 @@
                       </li>
                     </ul>
                   </li>
+                  END ABOUT US -->
 				        </ul>
 			      </nav>
             
             <!-- script 12 removed -->
             <script src="{% static 'js/nav.js' %}"></script>
 
+          <!----- SEARCH 
             <div id="bw-search-js" class="bw-search-site">
             <div>
             <h2 class="bw-is-toggled"><span>Search</span></h2>
@@ -186,6 +209,7 @@
                 </fieldset>
               </form>
             </div>
+            END SEARCH -->
       </div>
       </div>
       <!-- script 13 removed -->
