--- a/Blog+django/mainapp/static/css/style-original.css
+++ b/Blog+django/mainapp/static/css/style-original.css
@@ -26,12 +26,12 @@ p, h2, h3, ul {
 }
 
 /*  cabecera */
-/* header {
+header {
     width: 1200px;
     height: 130px;
     background-color: #23282b;
     margin: 0 auto;
-} */
+}
 
 #logotipo {
     width: 60%;
@@ -60,7 +60,7 @@ p, h2, h3, ul {
     margin-left: 20px;
     color:#2ba977;
 }
-/* 
+
 nav {
     width: 1250px;
     height: 50px;
@@ -70,14 +70,14 @@ nav {
     box-shadow: 0px 22px 22px gray;
     font-size: 15px;
     /* margin-bottom: 25px; */
-} */
+}
 
-nav ul {
+nav > ul {
     list-style: none;
     text-decoration: none;
 }
 
-nav ul li {
+nav > ul > li {
     line-height: 40px;
     float: left;
     padding-left: 10px;
@@ -85,20 +85,67 @@ nav ul li {
 }
 
 
-nav ul li a {
+nav > ul > li > a {
     display: block;
     padding-left: 10px;
     padding-right: 10px;
     color: #d1d4d6;
 }
 
-/* nav ul li a:hover {
+nav > ul > li > a:hover {
     background-color: #2ba977;
-    box-shadow: 0px 0px 5px 5px #547076 inset;
+    /* box-shadow: 0px 0px 5px 5px #547076 inset; */
     color: white;
     transition: all 300ms ;
 }
- */
+
+/* submenu */
+nav > ul > li > ul {
+    display: none;
+    position: absolute;
+    color: white;
+    text-align: left;
+    width: 160px;
+    box-shadow: 0px 5px 5px gray;
+
+}
+
+nav > ul > li:hover > ul {
+    display: block;
+    color:white;
+    margin: 0px;
+    list-style: none;
+}
+
+nav > ul > li:hover > ul > li{
+    background: #f2f1f0;
+    border-bottom: 1px solid #d6d6d6;
+    font-size: 14px;
+    line-height: 25px;
+    padding: 8px;
+    transition: all 300ms;
+}
+/* enlace de submenues */
+nav > ul > li:hover > ul > li a {
+    color: #556677;
+    transition: all 300ms;
+}
+/* al pasar por los enlace */
+nav > ul > li:hover > ul > li:hover {
+    background-color: mediumseagreen;
+}
+/* los enlace cuando se de paseo por los elementos */
+nav > ul > li:hover > ul > li:hover a{
+    color: white;
+    /* convertir toda el area clickable */
+    display: block;
+}
+
+
+/* end submenu */
+
+
+
 /*  barra 3D debajo del menu de navegacion */
 .barra {
     width: 1250px;
@@ -292,8 +339,8 @@ footer {
     clear: both;
 }
 .article-item .image img {
-    /* width: 155px; */
-    height: 250px;
+    width: 200px;
+    height: 145px;
     float: left;
     padding: 10px;
     padding-bottom: 0;
