--- a/Blog+django/mainapp/templates/layouts/layout_model_2.html
+++ b/Blog+django/mainapp/templates/layouts/layout_model_2.html
@@ -17,10 +17,10 @@
     <title>  {% block title %}  {% endblock %}</title>
 
     {% load static %}
-
+     {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/style-original.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/model_2-normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/model_2-styles.css' %}">
-
+   
     <!-- script+style  1 removido -->
     <!-- scrip+style 2  removido -->                      
 </head>
@@ -42,15 +42,31 @@
                 </div> 
 
                 <nav id="navegacion" class="navegacion">
+                <ul>
+                    <li>
+                     <a href="{% url 'index' %}">Inicio</a>
+                    </li> 
+   
                   
                     <!-- paginas dinamicas -->
                   {% for page in pages %}
-                
+                      <li>              
                       <a href="{% url 'page' page.2 %}"> {{page.1}}</a>
-                
+                      </li>
                   {% endfor %}
                   <!-- end pag dinamicas -->
+
+                <!-- submenu -->
+                  <li>
+                  <a href="{% url 'articles-list' %}">Categorías</a>
+                    <ul>
+                    <li>Cat 1</li>
+                    <li>Cat 2</li>
+                    <li>Categoria 3</li>
+                    <ul>
+                  </li>
 				
+                </ul>
                 </nav>
             </div>
             <h1>Blog sobre programación Python</h1>
@@ -63,12 +79,12 @@
      <main class="seccion contenedor">
 
        {% block content %}  {% endblock %}
-        <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
+       
 
         <div class="contenedor-anuncios">
-           
+            {% comment %} <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2> {% endcomment %}
 
-            <div class="anuncio">
+          {% comment %}   <div class="anuncio">
                 <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
@@ -77,17 +93,18 @@
 
                     <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
-            </div>
+            </div> {% endcomment %}
 
            
         </div>
 
-        <div class="ver-todas">
+       {% comment %}  <div class="ver-todas">
             <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
-        </div>
+        </div> {% endcomment %}
+
     </main>
 
-
+<!-- 
 
     <div class="seccion-inferior contenedor seccion">
         <section class="blog">
@@ -111,14 +128,20 @@
   
     </div>
 
-
+-->
 
   <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
           
 
                 <nav id="navegacion" class="navegacion">
-                  
+
+             
+                <!-- HOME as default -->
+         
+                <a href="{% url 'index' %}">Inicio</a>
+            
+
                     <!-- paginas dinamicas -->
                   {% for page in pages %}
                 
@@ -127,12 +150,15 @@
                   {% endfor %}
                   <!-- end pag dinamicas -->
 				
+                <!-- pagina estaticas -->
+                {% comment %} <a href="{% url 'articulos' %}">Artículos</a> {% endcomment %}
+            
                 </nav>
 
           
                 <a href="/">
                     {% comment %} <img href="#"  src="{% static 'model_2/img/logo.svg' %}" alt="Logotipo"> {% endcomment %}
-                    <img href="#"  height="50" src="{% static 'images/logo-modelo.png' %}" alt="Logotipo">
+                    <img href="#"  height="45" src="{% static 'images/logo-modelo.png' %}" alt="Logotipo">
                 </a>
            
             <p class="copyright">Todos los Derechos Reservados 2019 &copy; </p>
