--- a/Blog+django/mainapp/templates/mainapp/about.html
+++ b/Blog+django/mainapp/templates/mainapp/about.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/layout_model_2.html %}
+{% extends 'layouts/layout-original.html' %}
 {% comment %} {% extends 'layouts/layout.html' %} {% endcomment %}
 
 
