--- a/Blog+django/mainapp/templates/mainapp/index.html
+++ b/Blog+django/mainapp/templates/mainapp/index.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/layout_model_2.html' %}
+{% extends 'layouts/layout-original.html' %}
 
 {% block title %} {{title}} {% endblock %}
 
