--- a/Blog+django/mainapp/templates/mainapp/index.html
+++ b/Blog+django/mainapp/templates/mainapp/index.html
@@ -5,7 +5,16 @@
 {%  block content %}
     <h1> {{title}} </h1>
 
-    {{ pages }}
+    {% if messages %}
+
+        {% for message in messages %}
+            <div class="alert success">
+                {{message}}
+            </div>
+        {% endfor %}
+
+    {% endif %}
+
  {% endblock %}
 
 
