--- a/Blog+django/blog/templates/articles/list.html
+++ b/Blog+django/blog/templates/articles/list.html
@@ -13,10 +13,13 @@
     <div class="bw-release-body ">
             <div class="bw-release-story" itemprop="articleBody">
 
-                <h1 class="epi-pageTitle"> Todos los  {{title}} </h1>
+                <h1 class="epi-pageTitle">  {{title}} </h1>
         </div>
 
         {% include 'articles/articles.html' %}
+
+        <!-- pagination -->
+        {% include 'articles/pagination.html' %}
 
 
     </div>
